# multimedia-aml-audio-hal

./: CMakeLists.txt  readme.txt  version.h.ini  version_config.sh
amadec/: Android.mk  Makefile  adec-external-ctrl.c  adec-ffmpeg-mgt.c  adec-internal-mgt.c  adec-pts-mgt.c  adec-wfd-out.cpp  adec-wfd.c  adec_omx_brige.c  audio-dec.h  audiodsp_update_format.c  pcmenc_api.c  spdif_api.c
amadec/audio_out/: alsa-out.c  android-out.cpp  dtv_patch_out.c
amadec/include/: adec-external-ctrl.h  audio-out.h  audiodsp.h  log-print.h
amadec/omx_audio/: ALAC_mediasource.cpp  ASF_mediasource.cpp  DDP_mediasource.cpp  DTSHD_mediasource.cpp  MP3_mediasource.cpp  THD_mediasource.cpp  adec_omx.cpp  audio_mediasource.cpp
aml_adecs/: aml_aac_dec_api.c  aml_adpcm_dec_api.c  aml_adpcm_dec_api.h  aml_ddp_dec_api.c  aml_dec_api.c  aml_dec_api.h  aml_dts_dec_api.c  aml_dtsx_dec_api.c  aml_flac_dec_api.c  aml_mpeg_dec_api.c  aml_pcm_dec_api.c  aml_vorbis_dec_api.c
aml_adecs/include/: aml_ddp_dec_api.h  aml_dec_api.h  aml_dts_dec_api.h  aml_dtshd_dec_api.h
aml_aq_hw/: audio_eq_drc_compensation.c
aml_aq_hw/ini/: iniparser.c
aml_parser/: aml_audio_bitsparser.c  aml_audio_bitsparser.h  aml_audio_heaacparser.c
aml_parser/include/: aml_audio_heaacparser.h
aml_resampler/: aml_resample_wrap.cpp
aml_speed/: sonic_speed_wrapper.c
aml_speed/sonic/: sonic.c
amlogic_AQ_tools/: Amlogic_DRC_Param_Generator  Amlogic_EQ_Param_Generator  audio_eq_drc_compensation.c  audio_eq_drc_parser.c  audio_eq_drc_parser.h
audio_codec/libdcv/: CMakeLists.txt
audio_codec/libdts/: CMakeLists.txt
audio_codec/libfaad/: CMakeLists.txt  decoder.c  libaacdec.c  ps_dec.c  sbr_dec.c  sbr_hfadj.c
audio_codec/libmad/: CMakeLists.txt  decoder.c
audio_codec/libvorbis/: CMakeLists.txt  vorbisdec.c  vorbisdec.h
audio_codec/libvorbis/Tremolo/: asm_arm.h  bitwise.c  codebook.c  dsp.c  floor0.c  mapping0.c  misc.c
audio_hal/: Android.mk  DLGAudioPolicyManager.cpp  a2dp_hal.cpp  a2dp_hw.cpp  a2dp_hw.h  alsa_config_parameters.c  alsa_config_parameters.h  alsa_manager.c  alsa_manager.h  amlAudioMixer.c  amlAudioMixer.h  aml_ac3_parser.c  aml_audio_ac3parser.c  aml_audio_avsync_table.h  aml_audio_bitsparser.h  aml_audio_delay.c  aml_audio_delay.h  aml_audio_dev2mix_process.c  aml_audio_ease.c  aml_audio_hal_avsync.c  aml_audio_hal_avsync.h  aml_audio_mixer.c  aml_audio_mixer.h  aml_audio_ms12_bypass.c  aml_audio_ms12_render.c  aml_audio_ms12_render.h  aml_audio_ms12_sync.c  aml_audio_ms12_sync.h  aml_audio_nonms12_render.c  aml_audio_nonms12_render.h  aml_audio_resample_manager.c  aml_audio_scaletempo.c  aml_audio_spdif_output.c  aml_audio_spdif_output.h  aml_audio_spdifdec.c  aml_audio_spdifout.c  aml_audio_spdifout.h  aml_audio_stream.c  aml_audio_stream.h  aml_audio_timer.c  (+90 more)
audio_hal/libaudioprocessing/: AudioResamplerDyn.cpp  CMakeLists.txt
decoder/: Android.mk  aml_aac_dec_api.c  aml_adpcm_dec_api.c  aml_ddp_dec_api.c  aml_ddp_dec_api.h  aml_dec_api.c  aml_dec_api.h  aml_dtshd_dec_api.c  aml_dtshd_dec_api.h  aml_dtsx_dec_api.c  aml_dtsx_dec_api.h  aml_flac_dec_api.c  aml_flac_dec_api.h  aml_mpeg_dec_api.c  aml_pcm_dec_api.c  aml_vorbis_dec_api.c  aml_vorbis_dec_api.h
dtv_audio_utils/: Makefile
dtv_audio_utils/audio_data_read/: audio_dtv_ad.c  dmx_audio_es.cpp  uio_audio_read.c
dtv_audio_utils/audio_read_api/: audio_es.cpp  audio_es.h  dmx_audio_es.h  uio_audio_api.h
dtv_audio_utils/avutils/: amconfigutils.c  amsysfsutils.c  amthreadpool.c
dtv_audio_utils/dmxwrap/: AmDemuxWrapper.cpp  AmDemuxWrapper.h
dtv_audio_utils/sync/: audio_dtv_sync.c  audio_dtv_sync.h
dtv_audio_utils/utils/: TSPLooper.cpp  Vector.h  tsp_platform.h  tsplinux.h
include/: MediaSyncInterface.h  Virtualx.h  Virtualx_v4.h
include/audio_utils/: primitives.h
include/cutils/: trace.h
include/hardware/: audio.h
include/system/: audio-base-utils.h  audio-base.h  audio.h
include/utils/: ac3_parser_utils.h  alsa_device_parser.h  aml_alsa_mixer.h  aml_conf_parser.h  earc_utils.h  spdifenc_wrap.h
input/: dtv_patch.c  dtv_patch_hal_avsync.c  dtv_patch_utils.c  hdmirx_utils.c  tv_patch.c  tv_patch_avsync.c  tv_patch_ctrl.c  tv_patch_format_parser.c
input/include/: dtv_patch.h  dtv_patch_hal_avsync.h  dtv_patch_utils.h  hdmirx_utils.h  tv_patch.h  tv_patch_avsync.h  tv_patch_ctrl.h  tv_patch_format_parser.h
libamlaudioport/: AmlAudioOutPort.cpp  AmlAudioOutPort_test.cpp  Aml_DVB_Audio.cpp
libms12/include/: DolbyMS12.h  DolbyMS12ConfigParams.h  aml_audio_ms12.h  dolby_ms12.h  dolby_ms12_config_parameter_struct.h  dolby_ms12_config_params.h
libms12/src/: DolbyMS12.cpp  DolbyMS12ConfigParams.cpp  DolbyMS12Status.cpp  aml_audio_ms12.c  dolby_ms12.cpp  dolby_ms12_config_params.cpp  dolby_ms12_status.cpp
libms12_v24/: CMakeLists.txt
libms12_v24/include/: DolbyMS12.h  DolbyMS12ConfigParams.h  DolbyMS12Status.h  aml_audio_ms12.h  dolby_ms12.h  dolby_ms12_config_parameter_struct.h  dolby_ms12_config_params.h
libms12_v24/src/: DolbyMS12.cpp  DolbyMS12ConfigParams.cpp  DolbyMS12Status.cpp  aml_audio_ms12.c  dolby_ms12.cpp  dolby_ms12_config_params.cpp  dolby_ms12_status.cpp
libms12_v26/include/: DolbyMS12.h  DolbyMS12ConfigParams.h  aml_audio_ms12.h  dolby_ms12.h  dolby_ms12_config_params.h
libms12_v26/src/: DolbyMS12.cpp  DolbyMS12ConfigParams.cpp  DolbyMS12Status.cpp  dolby_ms12.cpp  dolby_ms12_status.cpp
libms12v2/: CMakeLists.txt
libms12v2/include/: DolbyMS12.h  DolbyMS12ConfigParams.h  DolbyMS12Status.h  aml_audio_ms12.h  dolby_ms12.h  dolby_ms12_config_parameter_struct.h  dolby_ms12_config_params.h
rcaudio/: AudioHardwareInput.cpp  AudioHotplugThread.cpp  AudioStreamIn.cpp  audio_hal_thunks.cpp
utils/: SPDIFEncoderAD.cpp  ac3_parser_utils.c  alsa_device_parser.c  aml_alsa_mixer.c  aml_android_utils.c  aml_audio_mixer.c  aml_audio_spdifdec.c  aml_avsync_stub.c  aml_data_utils.c  aml_dump_debug.c  aml_hw_mixer.c  aml_malloc_debug.c  aml_ringbuffer.c  aml_volume_utils.c  audio_data_process.c  channels.c  earc_utils.c  spdifenc_wrap.cpp
vendor_process/: aml_audio_aec.c  audio_aec.c  audio_post_process.c
(+120 files in other folders)
